--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@
                 <a href="#register-section" class="group bg-accent hover:bg-amber-600 text-white text-xl font-bold py-4 px-12 rounded-full shadow-[0_0_30px_rgba(245,158,11,0.5)] transition transform hover:scale-105 border-2 border-transparent hover:border-white/20">
                     <span class="group-hover:animate-pulse">🎁 اكشف هديتك الآن</span>
                 </a>
-                <a href="https://wa.me/966562082843" target="_blank" class="bg-white/10 hover:bg-white/20 backdrop-blur-md text-white border border-white/30 text-xl font-bold py-4 px-12 rounded-full transition">
-                    تواصل معنا
+                <a href="#services" class="bg-white/10 hover:bg-white/20 backdrop-blur-md text-white border border-white/30 text-xl font-bold py-4 px-12 rounded-full transition">
+                    ما الخدمات التي نقدمها لك
                 </a>
             </div>
         </div>
