--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            object-fit: cover;
+            object-fit: contain;
             z-index: -1;
         }
 
@@ -218,11 +218,11 @@
     <section class="py-10 bg-white relative -mt-10 z-20 container mx-auto px-4 rounded-3xl shadow-xl max-w-5xl">
         <div class="grid grid-cols-2 md:grid-cols-4 gap-6 text-center divide-x divide-x-reverse divide-gray-100">
             <div class="p-2 reveal">
-                <div class="text-4xl font-bold text-primary mb-2">+15</div>
-                <div class="text-gray-500 text-sm">سنة خبرة</div>
+                <div class="text-4xl font-bold text-primary mb-2">+7</div>
+                <div class="text-gray-500 text-sm">سنوات خبرة</div>
             </div>
             <div class="p-2 reveal">
-                <div class="text-4xl font-bold text-primary mb-2">+2000</div>
+                <div class="text-4xl font-bold text-primary mb-2">+1000</div>
                 <div class="text-gray-500 text-sm">حالة تم علاجها</div>
             </div>
             <div class="p-2 reveal">
