--- a/index.html
+++ b/index.html
@@ -147,13 +147,13 @@
             width: 100%; height: 100%;
             /* 'cover' fills the screen without stretching/distorting the video. 
                It crops edges if aspect ratio doesn't match. */
-            object-fit: cover; 
+            object-fit: contain; 
             z-index: 0;
         }
         .video-background-blur {
             position: absolute; top: 0; left: 0; width: 100%; height: 100%;
             background-image: url('https://images.unsplash.com/photo-1576091160399-112ba8d25d1d?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80');
-            background-size: contain; background-position: center;
+            background-size: cover; background-position: center;
             filter: blur(20px) brightness(0.4); z-index: 0;
         }
         
