--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
     </div>
 
     <!-- Floating Whatsapp -->
-    <a href="https://wa.me/966562082843" target="_blank" class="floating-whatsapp hover-target bg-green-500 w-14 h-14 md:w-16 md:h-16 rounded-full flex items-center justify-center text-white text-2xl md:text-3xl">
+    <a href="https://wa.me/⁦966555381558⁩" target="_blank" class="floating-whatsapp hover-target bg-green-500 w-14 h-14 md:w-16 md:h-16 rounded-full flex items-center justify-center text-white text-2xl md:text-3xl">
         <i class="fa-brands fa-whatsapp"></i>
     </a>
 
@@ -648,7 +648,7 @@
                             </div>
                         </div>
                         <div class="flex flex-col gap-3 max-w-sm mx-auto">
-                            <a href="https://wa.me/966562082843?text=مرحبا مركز الهمم، لدي كوبون استشارة مجانية HEMAM-2025-FREE وأرغب بحجز موعد" target="_blank" class="hover-target magnetic-btn bg-[#25D366] hover:bg-[#20bd5a] text-white font-bold py-3 px-6 rounded-xl shadow-md transition flex items-center justify-center gap-2 text-sm md:text-base">
+                            <a href="https://wa.me/⁦966555381558⁩?text=مرحبا مركز الهمم، لدي كوبون استشارة مجانية HEMAM-2025-FREE وأرغب بحجز موعد" target="_blank" class="hover-target magnetic-btn bg-[#25D366] hover:bg-[#20bd5a] text-white font-bold py-3 px-6 rounded-xl shadow-md transition flex items-center justify-center gap-2 text-sm md:text-base">
                                 <i class="fa-brands fa-whatsapp text-xl"></i> تفعيل الكوبون واتساب
                             </a>
                             <a href="https://www.google.com/maps/search/مركز+الهمم+جدة" target="_blank" class="hover-target magnetic-btn bg-gray-100 hover:bg-gray-200 text-gray-700 font-bold py-3 px-6 rounded-xl transition flex items-center justify-center gap-2 text-sm md:text-base">
